---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub record A {\n  A(b: B)\n}\n\npub record B {\n  B(c: C)\n}\n\npub record C {\n  C(d: Bool)\n}\n\npub fn a(a: A) {\n  case a {\n    _ if a.b.c.d -> 1\n    _ -> 0\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([a/1]).
-export_type([a/0, b/0, c/0]).

-type a() :: {a, b()}.

-type b() :: {b, c()}.

-type c() :: {c, boolean()}.

-file("/root/project/test/my/mod.rakun", 14).
-spec a(a()) -> integer().
a(A) ->
    case A of
        _ when erlang:element(2, erlang:element(2, erlang:element(2, A))) ->
            1;

        _ ->
            0
    end.
